--- a/DockerFile
+++ b/DockerFile
@@ -1,4 +1,5 @@
 FROM nginx:alpine
-# Copy toàn bộ file code vào thư mục web của Nginx
+# Copy toàn bộ nội dung thư mục hiện tại vào thư mục mặc định của Nginx
 COPY . /usr/share/nginx/html/
+# Port mặc định của Nginx là 80
 EXPOSE 80
